ash-code/tui/src/config/snapshots/config__provider__tests__narrow_provider_keeps_focused_inputs_visible.snap
---
source: ash-code/tui/src/config/provider_tests.rs
expression: "text(&render(&panel, 36, 14, Instant::now()))"
---
> Provider name
  ╭──────────────────────────────╮
  │ My gateway                   │
  ╰──────────────────────────────╯
  Base URL
  ╭──────────────────────────────╮
  │  https://example.test/gateway│
  ╰──────────────────────────────╯
  API key
  ╭──────────────────────────────╮
  │ API key (optional)           │
  ╰──────────────────────────────╯
