ash-code/tui/src/config/snapshots/config__provider__tests__new_provider_shows_all_fields.snap
---
source: ash-code/tui/src/config/provider_tests.rs
expression: "text(&render(&panel, 80, 25, Instant::now()))"
---
> Provider name
  ╭──────────────────────────────────────────────────────────────────────────╮
  │ Provider name                                                            │
  ╰──────────────────────────────────────────────────────────────────────────╯
  Base URL
  ╭──────────────────────────────────────────────────────────────────────────╮
  │ https://example.com/v1                                                   │
  ╰──────────────────────────────────────────────────────────────────────────╯
  API key
  ╭──────────────────────────────────────────────────────────────────────────╮
  │ API key (optional)                                                       │
  ╰──────────────────────────────────────────────────────────────────────────╯
  Model ID
  ╭──────────────────────────────────────────────────────────────────────────╮
  │ Leave empty to use the selected built-in model                           │
  ╰──────────────────────────────────────────────────────────────────────────╯
  API type                                                    OpenAI Responses
  Model context window                                                    272k
● Test
