ash-code/tui/src/config/snapshots/config__provider__tests__passed_provider_shows_success_feedback.snap
---
source: ash-code/tui/src/config/provider_tests.rs
expression: text(&buffer)
---
  Provider name
  ╭──────────────────────────────────────────────────────────────────────────╮
  │ My gateway                                                               │
  ╰──────────────────────────────────────────────────────────────────────────╯
  Base URL
  ╭──────────────────────────────────────────────────────────────────────────╮
  │ https://example.test/gateway/v1                                          │
  ╰──────────────────────────────────────────────────────────────────────────╯
  API key
  ╭──────────────────────────────────────────────────────────────────────────╮
  │ API key (optional)                                                       │
  ╰──────────────────────────────────────────────────────────────────────────╯
  Model ID
  ╭──────────────────────────────────────────────────────────────────────────╮
  │ private-model-alias                                                      │
  ╰──────────────────────────────────────────────────────────────────────────╯
  API type                                                    OpenAI Responses
  Model context window                                                    272k
● Test
  Passed
