ash-code/tui/src/config/snapshots/config__provider__tests__untested_provider_masks_key_and_keeps_marker_in_leading_column.snap
---
source: ash-code/tui/src/config/provider_tests.rs
expression: text(&buffer)
---
  Provider name
  ╭──────────────────────────────────────────────────────────────────────────╮
  │ My gateway                                                               │
  ╰──────────────────────────────────────────────────────────────────────────╯
  Base URL
  ╭──────────────────────────────────────────────────────────────────────────╮
  │  https://example.test/gateway/v1/                                        │
  ╰──────────────────────────────────────────────────────────────────────────╯
  API key
  ╭──────────────────────────────────────────────────────────────────────────╮
  │ ••••••••••••••••                                                         │
  ╰──────────────────────────────────────────────────────────────────────────╯
  Model ID
  ╭──────────────────────────────────────────────────────────────────────────╮
  │ private-model-alias                                                      │
  ╰──────────────────────────────────────────────────────────────────────────╯
  API type                                                    OpenAI Responses
  Model context window                                                    272k
● Test
